@@ -1,3 +1,8 @@
+2011-06-04  Jan Hubicka  <jh@suse.cz>
+
+	PR tree-optimize/48929
+	* gcc.c-torture/compile/pr48929.c: New testcase.
+
 2011-06-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/guality/rotatetest.c (f5, f6): Fix up pastos.
